fe-nextjs/kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-nextjs
  labels:
    app: fe-nextjs
    part-of: fe-nextjs
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - host: '*'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-nextjs
                port:
                  number: 80
